# case-machine-learning-engineer-pleno

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebook/: Notebook.ipynb  train_model.ipynb
src/: database.py  history.py  main.py  model.py  schemas.py
tests/: test_integration.py
