[tool.poetry]
name = "case-machine-learning-engineer-pleno"
version = "0.1.0"
description = ""
authors = ["Lucas Siqueira <siqueiraq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = {extras = ["standard"], version = "^0.112.1"}
uvicorn = "^0.30.6"
pytest = "^8.3.2"
mongomock = "^4.1.2"
scikit-learn = "^1.5.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.10"
jupyterlab = "^4.2.4"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.mypy]
ignore_missing_imports = true